[gd_scene load_steps=3 format=3 uid="uid://cuqtlda6wibmi"]

[ext_resource type="Script" uid="uid://21wcnw1atnrg" path="res://scripts/cutscene.gd" id="1_7bhn1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_subtitle"]
content_margin_left = 30.0
content_margin_top = 15.0
content_margin_right = 30.0
content_margin_bottom = 15.0
bg_color = Color(0, 0, 0, 0.7)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7bhn1")
next_scene = "uid://ogx55r16hxrc"

[node name="SlideImage" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="NarrationPlayer" type="AudioStreamPlayer" parent="."]

[node name="FadeRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="SubtitleContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -120.0
grow_horizontal = 2
grow_vertical = 0

[node name="PanelContainer" type="PanelContainer" parent="SubtitleContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_subtitle")

[node name="SubtitleLabel" type="Label" parent="SubtitleContainer/PanelContainer"]
custom_minimum_size = Vector2(800, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.98, 0.9, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 22
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
